<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="239dp"
            android:layout_height="184dp"
            android:layout_marginBottom="30dp"
            app:srcCompat="@drawable/pokemon_logo"
        />

        <Button
            android:id="@+id/pokedexButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/home_pokedex_button"
            android:visibility="visible"
            android:backgroundTint="@color/secondary"
        />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/home_about_button"
            android:backgroundTint="@color/secondary"
            />

        <Button
            android:id="@+id/courseButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/home_course_button"
            android:backgroundTint="@color/secondary"
            />

    </LinearLayout>
</RelativeLayout>