<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pokedex"
    android:background="@drawable/app_background"
>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
    >
        <LinearLayout
            android:layout_height="@dimen/header_height"
            android:layout_width="match_parent"
            android:background="@color/secondary"
        >
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingVertical="5dp"
                android:gravity="center_vertical"
            >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bBack"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:backgroundTint="@color/secondary"
                    app:icon="@drawable/ic_round_arrow_back"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconTint="@color/white"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokedex_title"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"
                />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
        >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/horizontal_padding"
                android:paddingVertical="25dp"
            >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                >
                    <EditText
                        android:id="@+id/searchPokemon"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_background"
                        android:ems="10"
                        android:hint="@string/pokedex_search_hint"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:textColorHint="@color/gray"
                        android:textColor="@color/black"
                    />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bClear"
                        android:visibility="gone"
                        android:backgroundTint="@color/secondary"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="10dp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        app:icon="@drawable/ic_round_clear_24"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        app:iconTint="@color/white"
                    />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bSearch"
                        android:backgroundTint="@color/secondary"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="10dp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        app:icon="@drawable/ic_round_search_24"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        app:iconTint="@color/white"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loadingState"
                    android:visibility="gone"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <ProgressBar
                        android:id="@+id/progressBar1"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pokemonResult"
                    android:visibility="gone"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                >

                    <ImageView
                        android:id="@+id/pokemonImage"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                    >
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="vertical"
                        >
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/pokemon_label"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:textSize="20dp"
                                android:textAlignment="center"
                                />
                            <TextView
                                android:id="@+id/pokemonName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:textSize="20dp"
                                android:textAlignment="center"
                            />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="vertical"
                        >
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/pokemon_id_label"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:textSize="20dp"
                                android:textAlignment="center"
                                />
                            <TextView
                                android:id="@+id/pokemonId"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:textSize="20dp"
                                android:textAlignment="center"
                            />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/searchError"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                >
                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:src="@drawable/pokestop"
                    />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="30dp"
                        android:text="@string/pokedex_search_error"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                    />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/emptyState"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                >
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/pokedex"
                    />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="30dp"
                        android:text="@string/pokedex_search_instructions"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                    />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>